--- a/pineapplepizza.yaml
+++ b/pineapplepizza.yaml
@@ -1,17 +1,1 @@
-# pineapplepizza
-This repo describes the spec for pineapple on pizza
-
----
-apiVersion: pineapplepizza/v1
-kind: pizza
-metadata:
-  name: Hawaiian Pizza
-  labels:
-    ingredients: canadianbacon
-    ingredients: pineapple
-    ingredients: cheese
-    ingredients: green peppers
-    ingredients: crust
-    
-spec:
-
+THIS THING SUCKS
