--- a/veganpineapplepizza.yaml
+++ b/veganpineapplepizza.yaml
@@ -8,7 +8,7 @@ kind: pizza
 metadata:
   name: Hawaiian Pizza
   labels:
-    ingredients: tofu bacon
+    ingredients: tofu ham
     ingredients: ethically sourced pineapple
     ingredients: cashew cheese
     ingredients: green peppers
